# cchatter

./: .clang-tidy  CMakeLists.txt  build_debug.sh  compile_flags.txt  shell.nix
include/: hash_table.h  packet.c  packet.h  socket.c  socket.h  vec.c  vec.h
src/client/: main.c
src/server/: main.c
tests/: vec.c
